# read-the-room

./: .env.example  .gitignore  M5_PROMPT.md  M6_PROMPT.md  M7_PROMPT.md  README.md  pyproject.toml
data/: playlists.json
docs/: FIELD-NOTES.md  M2-TEST-PLAN.md  M3-PROPOSAL.md  M3-TEST-PLAN.md  M4-PROPOSAL.md  M4-TEST-PLAN.md  M5-PROPOSAL.md  M5-TEST-PLAN.md  M6-PROPOSAL.md  M6-TEST-PLAN.md  M7-CHARTER-REVISION.md  M7-PROPOSAL.md  M7-TEST-PLAN.md
scripts/: bench_emotion.py  bench_headcount.py  m7_candidates.py  m7_corpus_analysis.py  m7_replay_session.py  tts_harness.py  tts_synth.ps1  tuning_report.py
src/dashboard/: __init__.py  __main__.py  annotations.py  app.py  bridge.py  overrides.py  presence.py
src/dashboard/static/: index.html
src/mapping/: __init__.py  config.py  mapper.py  rulebook.py
src/playback/: __init__.py  config.py  controller.py  playlists.py  provider.py  selector.py  spotify.py  spotify_auth.py
src/sensing/: __init__.py  __main__.py  audio.py  config.py  dsp.py  emotion.py  engine.py  headcount.py  music.py  state.py  vad.py
src/sensing/consumers/: __init__.py  console.py  jsonl.py
tests/: conftest.py  test_dashboard.py  test_headcount.py  test_headcount_worker.py  test_mapper.py  test_music.py  test_playback.py  test_presence.py  test_spotify.py  test_state.py  test_tuning_report.py
